@@ -1,4 +1,4 @@
-Adminer-4.18.0-dev:
+Adminer dev:
 SQLite: Support CHECK constraint
 SQLite: Add command Check tables
 SQLite: Display all rows of variable values
@@ -6,9 +6,10 @@ SQLite: Remove support for SQLite version 2
 MS SQL: Support export (bug #480)
 MS SQL: Display foreign keys ON UPDATE and ON DELETE
 MS SQL: Fix altering foreign key
+MS SQL: Remove support for MSSQL extension
 MongoDB: Remove support for deprecated extension mongo
 
-Adminer-4.17.1 (released 2025-02-25):
+Adminer 4.17.1 (released 2025-02-25):
 MySQL: Fix typo in the date type (regression from 4.17.0)
 
 Adminer 4.17.0 (released 2025-02-24):
